fixed dark mode on student view peer review answers page

--- a/frontend/src/components/InstructorPage/InstructorPage.css
+++ b/frontend/src/components/InstructorPage/InstructorPage.css
@@ -188,7 +188,7 @@
     .bold {
         font-family: sans-serif;
         font-weight: 600;
-        color: #3a3a3a;
+        /*color: #3a3a3a;*/
     }
     @media (max-width: 750px) {
         display: flex;
